build/automation/lib/k8s/template/deployment/stacks/stack/base/template/STACK_TEMPLATE_TO_REPLACE/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: STACK_TEMPLATE_TO_REPLACE-service
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  labels:
    objectType: service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    app: STACK_TEMPLATE_TO_REPLACE
